[package]
name = "ritedb"
version = "0.0.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/ritedb/ritedb"
description = "Placeholder for RiteDB. A basic database written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
